Fix overflow and text unable to be seen, change relative to absolut

--- a/styles/global.css
+++ b/styles/global.css
@@ -29,7 +29,7 @@ pre {
 
 html {
   background-color: #424242;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .herotext {
